<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mAttr="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color"
    >
    <com.starlight.mobile.android.lib.view.CusHeadView
        android:id="@+id/repair_reward_layout_ch_head"
        style="@style/common_head_style"
        mAttr:chHead_leftImg="@mipmap/ic_back"
        mAttr:chHead_title="@string/repair_award"
        mAttr:chHead_title_padding_left="0dip" />
    <View style="@style/common_line_style"
        android:layout_below="@+id/repair_reward_layout_ch_head"
        android:id="@+id/repair_reward_layout_v_head"
        />
    <View android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/repair_reward_layout_et_money"
        android:layout_alignTop="@+id/repair_reward_layout_et_money"
        android:layout_alignLeft="@+id/repair_reward_layout_tv_money_title"
        android:layout_alignRight="@+id/repair_reward_layout_tv_yuan"
        android:background="@drawable/repair_reward_et_shape"
        />
    <TextView
        android:id="@+id/repair_reward_layout_tv_money_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_total"
        android:paddingLeft="15dip"
        android:layout_alignBottom="@+id/repair_reward_layout_et_money"
        android:layout_alignTop="@+id/repair_reward_layout_et_money"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:textColor="@color/common_light_text_color"
        android:layout_marginLeft="20dip"
        />
    <EditText
        android:id="@+id/repair_reward_layout_et_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/repair_reward_layout_tv_money_title"
        android:layout_weight="1"
        android:layout_marginTop="20dip"
        android:inputType="numberDecimal"
        android:gravity="right"
        android:layout_below="@+id/repair_reward_layout_v_head"
        android:background="@null"
        android:textSize="14sp"
        android:layout_toLeftOf="@+id/repair_reward_layout_tv_yuan"
        android:layout_gravity="center_vertical"
        android:padding="15dip"
        android:textColor="@color/common_light_text_color"
        android:textColorHint="@color/common_hint_text_color"
        android:hint="@string/money_total_hint"
        />
    <TextView
        android:id="@+id/repair_reward_layout_tv_yuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuan"
        android:layout_weight="0"
        android:paddingRight="15dip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dip"
        android:layout_alignBottom="@+id/repair_reward_layout_et_money"
        android:layout_alignTop="@+id/repair_reward_layout_et_money"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:textColor="@color/common_light_text_color"
        />


    <EditText
        android:id="@+id/repair_reward_layout_et_title"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:textSize="14sp"
        android:gravity="top"
        android:layout_below="@+id/repair_reward_layout_et_money"
        android:padding="15dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/repair_reward_et_shape"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:textColor="@color/common_light_text_color"
        android:textColorHint="@color/common_hint_text_color"
        android:hint="@string/repair_award_default_title"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_total_hint"
        android:id="@+id/repair_reward_layout_tv_money"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dip"
        android:textSize="40sp"
        android:layout_marginRight="20dip"
        android:textColor="@color/common_text_color"
        android:layout_below="@+id/repair_reward_layout_et_title"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_unit"
        android:textColor="@color/common_text_color"
        android:layout_alignTop="@+id/repair_reward_layout_tv_money"
        android:layout_toLeftOf="@+id/repair_reward_layout_tv_money"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/repair_reward_layout_tv_submit"
        style="@style/common_button_style"
        android:layout_marginLeft="20dip"
        android:layout_below="@+id/repair_reward_layout_tv_money"
        android:layout_marginRight="20dip"
        android:background="@drawable/red_package_btn_selector"
        android:text="@string/insert_money_into_red_packets"
        />
</RelativeLayout>