<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/complaint_layout_iv_back"
        android:onClick="onClickListener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_back"
        android:paddingTop="@dimen/margin"
        android:paddingBottom="@dimen/margin"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="30dip"
        android:scaleType="centerInside"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complaint"
        android:textColor="@color/common_text_color"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="10dip"
        />
    <TextView
        android:id="@+id/complaint_layout_tv_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_text_color"
        android:text="@string/property_phone"
        android:layout_marginLeft="@dimen/margin"
        />
    <View style="@style/common_light_line_style"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        />
    <EditText
        android:id="@+id/complaint_layout_et_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="10dip"
        android:hint="@string/complaint_hint"
        android:gravity="top"
        android:background="@android:color/transparent"
        android:layout_weight="1"
        android:textSize="12sp"
        android:textColor="@color/common_text_color"
        android:textColorHint="@color/common_hint_text_color"
        />
    <View style="@style/common_light_line_style"
        android:layout_marginBottom="30dip"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        />
    <Button
        android:id="@+id/complaint_layout_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commit"
        android:onClick="onClickListener"
        android:textColor="@android:color/white"
        android:layout_weight="0"
        android:background="@drawable/common_btn_selector"
        />
</LinearLayout>