<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mAttr="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">
    <com.starlight.mobile.android.lib.view.CusHeadView
        android:id="@+id/property_fee_detail_layout_ch_head"
        style="@style/common_head_style"
        mAttr:chHead_leftImg="@mipmap/ic_back"
        mAttr:chHead_title="@string/payment_detail"
        mAttr:chHead_title_padding_left="0dip" />
    <View style="@style/common_line_style"
        android:layout_below="@+id/property_fee_detail_layout_ch_head"
        android:id="@+id/property_fee_detail_layout_v_head"
        />
    <TextView
        android:id="@+id/property_fee_detail_layout_tv_community"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="20dip"
        android:layout_gravity="center_horizontal"
        android:text="世嘉国际华城八栋三单元1205"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/property_fee_detail_layout_v_head"
        android:textColor="@color/common_text_color"
        />
    <TextView
        android:id="@+id/property_fee_detail_layout_tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="￥800.00"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/common_light_text_color"
        android:textSize="24sp"
        android:layout_below="@+id/property_fee_detail_layout_tv_community"
        />
    <TextView
        android:id="@+id/property_fee_detail_layout_tv_payment_succuss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="成功缴纳三个月物业费"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:textColor="@color/common_dark_gray_text_color"
        android:layout_below="@+id/property_fee_detail_layout_tv_money"
        />
    <!--支付方式-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:textColor="@color/common_dark_gray_text_color"
        android:layout_alignTop="@+id/property_fee_detail_layout_tv_payment_method"
        android:text="@string/payment_method"
        />
    <TextView
        android:id="@+id/property_fee_detail_layout_tv_payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="40dip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/common_text_color"
        android:layout_below="@+id/property_fee_detail_layout_tv_payment_succuss"
        android:text="@string/weixin_payment"
        />
    <!--缴费类型-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:textColor="@color/common_dark_gray_text_color"
        android:layout_alignTop="@+id/property_fee_detail_layout_tv_payment_type"
        android:text="@string/payment_type"
        />
    <TextView
        android:id="@+id/property_fee_detail_layout_tv_payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/common_text_color"
        android:layout_below="@+id/property_fee_detail_layout_tv_payment_method"
        android:text="@string/property_fee"
        />
    <!--物业费-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:textColor="@color/common_dark_gray_text_color"
        android:layout_alignTop="@+id/property_fee_detail_layout_tv_propery_fee"
        android:text="@string/property_manager_fee"
        />
    <TextView
        android:id="@+id/property_fee_detail_layout_tv_propery_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/common_text_color"
        android:layout_below="@+id/property_fee_detail_layout_tv_payment_type"
        android:text="1.8 元/㎡"
        />
    <!--总面积-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:textColor="@color/common_dark_gray_text_color"
        android:layout_alignTop="@+id/property_fee_detail_layout_tv_area"
        android:text="@string/total_area"
        />
    <TextView
        android:id="@+id/property_fee_detail_layout_tv_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/common_text_color"
        android:layout_below="@+id/property_fee_detail_layout_tv_propery_fee"
        android:text="120 ㎡"
        />
    <View style="@style/common_light_line_style"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="5dip"
        android:id="@+id/property_fee_detail_layout_v_area"
        android:layout_below="@+id/property_fee_detail_layout_tv_area"
        />
    <!--创建时间-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:textColor="@color/common_dark_gray_text_color"
        android:layout_alignTop="@+id/property_fee_detail_layout_tv_date"
        android:text="@string/payment_date"
        />
    <TextView
        android:id="@+id/property_fee_detail_layout_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/common_text_color"
        android:layout_below="@+id/property_fee_detail_layout_v_area"
        android:text="2017-08-11 07:10"
        />
    <!--订单号-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:textColor="@color/common_dark_gray_text_color"
        android:layout_alignTop="@+id/property_fee_detail_layout_tv_order_number"
        android:text="@string/order_number"
        />
    <TextView
        android:id="@+id/property_fee_detail_layout_tv_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:textColor="@color/common_text_color"
        android:layout_below="@+id/property_fee_detail_layout_tv_date"
        android:text="2017081107107287183237"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg_color"
        android:layout_below="@+id/property_fee_detail_layout_tv_order_number"
        />

</RelativeLayout>