<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mAttr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:paddingBottom="30dip"
        android:layout_marginRight="30dp"
        android:background="@drawable/property_payment_dialog_bg_shape"
        android:gravity="center"
        android:orientation="vertical" >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/property_payment_dialog_layout_iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_back"
                android:layout_gravity="center_vertical"
                android:padding="15dip"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dip"
                android:textColor="@color/common_light_text_color"
                android:text="@string/select_payment_method"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/property_payment_dialog_layout_tv_money_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/property_payment_hint"
            android:textSize="10sp"
            android:paddingTop="20dip"
            android:background="@color/common_bg_color"
            android:gravity="center_horizontal"
            android:textColor="@color/common_light_text_color"
            />
        <TextView
            android:id="@+id/property_payment_dialog_layout_tv_money"
            android:layout_width="match_parent"
            android:background="@color/common_bg_color"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="￥800.00"
            android:paddingBottom="30dip"
            android:textColor="@color/common_text_color"
            android:paddingTop="10dip"
            android:textSize="24sp"
            />
        <com.starlight.mobile.android.lib.view.CusTextView
            android:id="@+id/property_payment_dialog_layout_tv_alipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alipay_payment"
            android:textColor="@color/common_text_color"
            android:paddingLeft="20dip"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:paddingRight="@dimen/margin"
            android:drawableLeft="@mipmap/alipay"
            mAttr:ctv_leftImg_width="25dip"
            mAttr:ctv_leftImg_height="25dip"
            android:clickable="true"
            android:background="@drawable/common_item_click_selector"
            android:drawablePadding="15dip"
            android:gravity="center_vertical"
            />
        <com.starlight.mobile.android.lib.view.CusTextView
            android:id="@+id/property_payment_dialog_layout_tv_weixin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weixin_payment"
            android:textColor="@color/common_text_color"
            android:paddingLeft="20dip"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:clickable="true"
            android:background="@drawable/common_item_click_selector"
            android:paddingRight="@dimen/margin"
            android:drawableLeft="@mipmap/weinxin"
            mAttr:ctv_leftImg_width="25dip"
            mAttr:ctv_leftImg_height="25dip"
            android:drawablePadding="15dip"
            android:gravity="center_vertical"
            />
    </LinearLayout>

</FrameLayout>